Add operation functions and basic ui

--- a/index.html
+++ b/index.html
@@ -2,8 +2,49 @@
   <head>
     <link rel="stylesheet" href="reset.css"></link>
     <link rel="stylesheet" href="styles.css"></link>
-    <script src="script.js"></script>
-<body>
+  </head>
 
-</body>
+  <body>
+
+    <div class="main">
+    <div class="calculator">
+
+      <div class="screen"></div>
+
+      <div class="operations">
+        <div class="add operation button">+</div>
+        <div class="subtract operation button">-</div>
+        <div class="multiply operation button">*</div>
+        <div class="divide operation button">/</div>
+      </div>
+
+      <div class="numbers">
+        <div class="row1">
+          <div class="one number button">1</div>
+          <div class="two number button">2</div>
+          <div class="three number button">3</div>
+        </div>
+        <div class="row2">
+          <div class="four number button">4</div>
+          <div class="five number button">5</div>
+          <div class="six number button">6</div>
+        </div>
+        <div class="row3">
+          <div class="seven number button">7</div>
+          <div class="eight number button">8</div>
+          <div class="nine number button">9</div>
+        </div>
+      </div>
+
+      <div class="lastrow">
+        <div class="clear option button">Clear</div>
+        <div class="zero option button">0</div>
+        <div class="equals option button">=</div>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+  </body>
 </html>
