--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="reset.css"></link>
     <link rel="stylesheet" href="styles.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   </head>
 
   <body>
