--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="operations">
         <div class="add operation button">+</div>
         <div class="subtract operation button">-</div>
-        <div class="multiply operation button">*</div>
-        <div class="divide operation button">/</div>
+        <div class="multiply operation button">x</div>
+        <div class="backspace operation button">C</div>
       </div>
 
       <div class="numbers">
@@ -24,27 +24,33 @@
           <div class="one number button">1</div>
           <div class="two number button">2</div>
           <div class="three number button">3</div>
+          <div class="divide operation button">/</div>
+
         </div>
         <div class="row2">
           <div class="four number button">4</div>
           <div class="five number button">5</div>
           <div class="six number button">6</div>
+          <div class="modullo operation button">%</div>
         </div>
         <div class="row3">
           <div class="seven number button">7</div>
           <div class="eight number button">8</div>
           <div class="nine number button">9</div>
+          <div class="three number button">.</div>
         </div>
       </div>
 
       <div class="lastrow">
         <div class="clear option button">Clear</div>
-        <div class="zero option button">0</div>
+        <div class="zero number button">0</div>
         <div class="equals option button">=</div>
       </div>
 
     </div>
   </div>
+
+  <audio src="click.mp3" class="click"></audio>
 
   <script src="script.js"></script>
   </body>
