Add new buttons( %, . , CE)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="add operation button">+</div>
         <div class="subtract operation button">-</div>
         <div class="multiply operation button">x</div>
-        <div class="backspace operation button">C</div>
+        <div class="backspace operation button">CE</div>
       </div>
 
       <div class="numbers">
