--- a/index.html
+++ b/index.html
@@ -13,38 +13,40 @@
       <div class="screen"></div>
 
       <div class="operations">
-        <div class="add operation button">+</div>
-        <div class="subtract operation button">-</div>
-        <div class="multiply operation button">x</div>
-        <div class="backspace operation button">CE</div>
+        <div data-key = "107" class="add operation button">+</div>
+        <div data-key = "109" class="subtract operation button">-</div>
+        <div data-key = "35" class="multiply operation button">x</div>
+        <div data-key = "35" class="backspace operation button">🡐</div>
       </div>
 
       <div class="numbers">
         <div class="row1">
-          <div class="one number button">1</div>
-          <div class="two number button">2</div>
-          <div class="three number button">3</div>
-          <div class="divide operation button">/</div>
+          <div data-key = "49" class="one number button">1</div>
+          <div data-key = "50" class="two number button">2</div>
+          <div data-key = "51" class="three number button">3</div>
+          <div data-key = "13" class="clear option button">C</div>
+
 
         </div>
         <div class="row2">
-          <div class="four number button">4</div>
-          <div class="five number button">5</div>
-          <div class="six number button">6</div>
-          <div class="modullo operation button">%</div>
+          <div data-key = "52" class="four number button">4</div>
+          <div data-key = "53" class="five number button">5</div>
+          <div data-key = "54" class="six number button">6</div>
+          <div data-key = "77" class="modullo operation button">%</div>
         </div>
         <div class="row3">
-          <div class="seven number button">7</div>
-          <div class="eight number button">8</div>
-          <div class="nine number button">9</div>
-          <div class="three number button">.</div>
+          <div data-key = "57" class="seven number button">7</div>
+          <div data-key = "58" class="eight number button">8</div>
+          <div data-key = "59" class="nine number button">9</div>
+          <div data-key = "111" class="divide operation button">/</div>
         </div>
       </div>
 
       <div class="lastrow">
-        <div class="clear option button">Clear</div>
-        <div class="zero number button">0</div>
-        <div class="equals option button">=</div>
+        <div data-key = "67" class="equals option button">=</div>
+        <div data-key = "48" class="zero number button">0</div>
+        <div data-key = "190" class="three number button">.</div>
+
       </div>
 
     </div>
