--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <audio src="click.mp3" class="click"></audio>
+  <audio src="click.MP3" class="click"></audio>
 
   <script src="script.js"></script>
   </body>
